Try again to stop summary being too large when printing

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -44,6 +44,10 @@
   @media (min-width: 600px) { @content; }
 }
 
+@mixin media_screen_larger_than_mobile {
+  @media only screen and (min-width: 600px) { @content; }
+}
+
 @mixin media_mobile {
   @media (max-width: 600px) { @content; }
 }
