--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -66,8 +66,8 @@
     }
   }
 
-  @media only screen .executive-summary {
-    @include media_larger_than_mobile { font-size: 1.125rem; }
+  .executive-summary {
+    @include media_screen_larger_than_mobile { font-size: 1.125rem; }
   }
 }
 
